@@ -51,22 +51,22 @@ class ClassicPlatformConfigProviderTest {
 
     @Test
     void testNoUserHome() {
-        assertEquals(Arrays.asList("/.itools"), getAbsolutePaths(null));
+        assertEquals(List.of("/.itools"), getAbsolutePaths(null));
     }
 
     @Test
     void testEdgeCaseEmptyAfterSplit() {
-        assertEquals(Arrays.asList("/.itools"), getAbsolutePaths(":"));
+        assertEquals(List.of("/.itools"), getAbsolutePaths(":"));
     }
 
     @Test
     void workDir() {
-        assertEquals(Arrays.asList("/work"), getAbsolutePaths("."));
+        assertEquals(List.of("/work"), getAbsolutePaths("."));
     }
 
     @Test
     void testEmptyConfigDirs() {
-        assertEquals(Arrays.asList("/.itools"), getAbsolutePaths(""));
+        assertEquals(List.of("/.itools"), getAbsolutePaths(""));
     }
 
     @Test
@@ -81,6 +81,6 @@ class ClassicPlatformConfigProviderTest {
         }
         ModuleConfigRepository loadModuleRepository = ClassicPlatformConfigProvider
                 .loadModuleRepository(new Path[] {fileSystem.getPath("/") }, "config");
-        assertEquals("baz", loadModuleRepository.getModuleConfig("foo").get().getStringProperty("bar"));
+        assertEquals("baz", loadModuleRepository.getModuleConfig("foo").orElseThrow().getStringProperty("bar"));
     }
 }
